@full-cycle/8.ingress/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
    - host: "ingress.fullcycle.com.br"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              serviceName: goserver-service
              servicePort: 4000
